--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@ svg.selectAll("circle")
   .enter().append("circle")
 	.attr("cx", function(d) { return d.XPosition; })
 	.attr("cy", function(d) { return d.YPosition; })
-	.attr("r", 10)
+	.attr("r", 11)
 	.attr("class", function(d) { return d.Medical; });
 
 svg.selectAll("rect")
 	.data(people.filter(function(person, index, people) { return person.Gender === "M"; }))
   .enter().append("rect")
-	.attr("x", function(d) { return d.XPosition; })
-	.attr("y", function(d) { return d.YPosition; })
+	.attr("x", function(d) { return (d.XPosition - 10); })
+	.attr("y", function(d) { return (d.YPosition- 10); })
 	.attr("width", 20)
 	.attr("height", 20);
 
