--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ svg.selectAll("rect")
 	.attr("height", personSize);
 
 svg.append("g").selectAll("path")
-	.data(relationships.filter(function(rel, index, relationships) { return rel.Type === "Parent"; }))
+	.data(parents)
   .enter().append("path")
 	.attr("d", function(r) {
 		var fromNode = findPersonById(r.B);
@@ -48,7 +48,7 @@ svg.append("g").selectAll("path")
 	});
 
 svg.append("g").selectAll("path")
-	.data(relationships.filter(function(rel, index, relationships) { return rel.Type === "Spouse"; }))
+	.data(peers)
   .enter().append("path")
 	.attr("d", function(r) {
 		var fromNode = findPersonById(r.A);
